--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,135 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
+    android:orientation="vertical"
     android:background="@drawable/gradient_black">
 
     <EditText
+        android:id="@+id/main_search"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:text="Search"
-        android:textColor="@color/white"
+        android:layout_margin="18dp"
+        android:text="Search movie, artist, songs"
+        android:background="@drawable/rounded_corner_white"
+        android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal"
-        app:layout_constraintBottom_toTopOf="@+id/editText2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.764" />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="142dp"
-        android:layout_height="45dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="77dp"
-        tools:text="@string/country" />
-
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="269dp"
-        android:layout_height="45dp"
-        android:ems="10"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        android:inputType="textPersonName"
-        android:text=""
-        app:layout_constraintStart_toEndOf="@+id/editText"
-        tools:layout_editor_absoluteY="77dp" />
-
-    <EditText
-        android:id="@+id/media"
-        android:layout_width="141dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        android:inputType="textPersonName"
-        android:text="@string/media"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
-
-    <EditText
-        android:id="@+id/media_et"
-        android:layout_width="269dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="1dp"
-        android:ems="10"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        android:inputType="textPersonName"
-        android:text=""
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/media"
-        tools:layout_editor_absoluteY="130dp" />
-
-    <!--<LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        android:orientation="vertical"
-        android:padding="16dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="Country?"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-            android:textSize="18sp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/appointment_fragment_service"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/white_bg"
-            android:drawableEnd="@drawable/ic_direction_right"
-            android:elevation="10dp"
-            android:gravity="center_vertical"
-            android:hint="Select a service"
-            android:paddingBottom="15dp"
-            android:paddingStart="15dp"
-            android:paddingTop="15dp"
-            android:textColorHint="@color/charcoalGrey"/>
-    </LinearLayout>-->
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="527dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText3"
-        app:layout_constraintVertical_bias="0.875" />
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:imeOptions="actionSearch"/>
 
     <TextView
-        android:id="@+id/editText3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/main_country"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="18dp"
+        android:layout_below="@id/main_search"
+        android:gravity="start|center"
+        android:ems="10"
+        android:text="@string/country"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:textStyle="normal"/>
+
+    <TextView
+        android:id="@+id/main_country_select"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginEnd="18dp"
+        android:layout_below="@id/main_search"
+        android:layout_toEndOf="@+id/main_country"
+        android:layout_alignParentEnd="true"
+        android:gravity="start|center"
+        android:drawableRight="@drawable/ic_keyboard_arrow_down_white_24dp"
         android:ems="10"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="normal"
-        android:text="Date"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/media_et" />
+        android:hint="@string/select_country"
+        android:ellipsize="end"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/main_media"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="5dp"
+        android:layout_below="@id/main_country"
+        android:gravity="start|center"
+        android:ems="10"
+        android:text="@string/media"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:textStyle="normal"/>
+
+    <TextView
+        android:id="@+id/main_media_select"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginTop="5dp"
+        android:layout_below="@id/main_country_select"
+        android:layout_toEndOf="@+id/main_media"
+        android:layout_alignParentEnd="true"
+        android:gravity="start|center"
+        android:drawableRight="@drawable/ic_keyboard_arrow_down_white_24dp"
+        android:ems="10"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:textStyle="normal"
+        android:text="Sample "
+        android:ellipsize="end"/>
+
+    <TextView
+        android:id="@+id/main_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginTop="5dp"
+        android:ems="10"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:textStyle="normal"
+        android:text=""
+        android:layout_below="@id/main_media"/>
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/main_swipe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/main_date"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="0dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/main_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"/>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+</RelativeLayout>
