--- a/app/src/main/res/layout/row_card_view.xml
+++ b/app/src/main/res/layout/row_card_view.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:elevation="3dp"
@@ -42,6 +42,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:text="trackName"
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     android:ems="10"
                     android:textColor="@color/white"
                     android:textStyle="bold"
@@ -53,6 +55,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="price"
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     android:ems="10"
                     android:textColor="@color/white"
                     android:textStyle="bold"
@@ -66,6 +70,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:text="primaryGenreName"
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     android:ems="10"
                     android:textColor="@color/white"
                     android:textStyle="bold"
