--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,121 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:id="@+id/main_activity_container"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/gradient_black">
+    tools:context=".ui.activities.MainActivity">
 
-    <EditText
-        android:id="@+id/main_search"
+    <FrameLayout
+        android:id="@+id/activity_container"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_margin="18dp"
-        android:text="Search movie, artist, songs"
-        android:background="@drawable/rounded_corner_white"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:imeOptions="actionSearch"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+    </FrameLayout>
 
-    <TextView
-        android:id="@+id/main_country"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="18dp"
-        android:layout_below="@id/main_search"
-        android:gravity="start|center"
-        android:ems="10"
-        android:text="@string/country"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:textStyle="normal"/>
-
-    <TextView
-        android:id="@+id/main_country_select"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginEnd="18dp"
-        android:layout_below="@id/main_search"
-        android:layout_toEndOf="@+id/main_country"
-        android:layout_alignParentEnd="true"
-        android:gravity="start|center"
-        android:drawableRight="@drawable/ic_keyboard_arrow_down_white_24dp"
-        android:ems="10"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        android:hint="@string/select_country"
-        android:ellipsize="end"/>
-
-    <TextView
-        android:id="@+id/main_media"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="5dp"
-        android:layout_below="@id/main_country"
-        android:gravity="start|center"
-        android:ems="10"
-        android:text="@string/media"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:textStyle="normal"/>
-
-    <TextView
-        android:id="@+id/main_media_select"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginTop="5dp"
-        android:layout_below="@id/main_country_select"
-        android:layout_toEndOf="@+id/main_media"
-        android:layout_alignParentEnd="true"
-        android:gravity="start|center"
-        android:drawableRight="@drawable/ic_keyboard_arrow_down_white_24dp"
-        android:ems="10"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        android:text="Sample "
-        android:ellipsize="end"/>
-
-    <TextView
-        android:id="@+id/main_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginTop="5dp"
-        android:ems="10"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        android:text=""
-        android:layout_below="@id/main_media"/>
-
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/main_swipe"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/main_date"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="0dp">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/main_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="vertical"/>
-
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-</RelativeLayout>
+</LinearLayout>
