--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -4,18 +4,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_black"
-    android:orientation="vertical">
-    <!--     tools:context=".ViewDetailFragment"> -->
+    android:orientation="vertical"
+    tools:context=".ui.fragments.DetailsFragment">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:theme="@style/ToolbarColoredBackArrow"
+        android:minHeight="?attr/actionBarSize"
+        tools:ignore="MissingPrefix">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/toolbarTitle"
+            android:maxLines="1"
+            android:textSize="20sp"
+            android:typeface="serif"
+            android:textColor="@color/white"
+            android:ellipsize="end"/>
+
+    </androidx.appcompat.widget.Toolbar>
+
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:id="@+id/details_image"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_gravity="center_horizontal"
         android:layout_margin="10dp"/>
 
     <TextView
-        android:id="@+id/trackName"
+        android:id="@+id/details_trackName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:text="trackName"
         android:ems="10"
@@ -24,9 +49,10 @@
         android:textSize="16sp"/>
 
     <TextView
-        android:id="@+id/artistName"
+        android:id="@+id/details_artistName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:text="artistName"
         android:ems="10"
@@ -35,19 +61,10 @@
         android:textSize="16sp"/>
 
     <TextView
-        android:id="@+id/primaryGenreName"
+        android:id="@+id/details_collectionName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="primaryGenreName"
-        android:ems="10"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="16sp"/>
-    <TextView
-        android:id="@+id/collectionName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:text="collectionName"
         android:ems="10"
@@ -56,9 +73,10 @@
         android:textSize="16sp"/>
 
     <TextView
-        android:id="@+id/trackPrice"
+        android:id="@+id/details_trackPrice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:text="trackPrice"
         android:ems="10"
@@ -67,25 +85,30 @@
         android:textSize="16sp"/>
 
     <TextView
-        android:id="@+id/trackTimeMillis"
+        android:id="@+id/details_country"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="trackTimeMillis"
-        android:ems="10"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="16sp"/>
-
-    <TextView
-        android:id="@+id/country"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:text="country"
         android:ems="10"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="16sp"/>
+
+    <TextView
+        android:id="@+id/details_link"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:text="link"
+        android:ems="10"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="16sp"/>
+
+
+
 
 </LinearLayout>
